test/reusable/error/eval_app_match_fail.bfr
let f = fun (a, b) -> a + b

main { x: cell; } [
  + x (f 1 2)
]